# confgate

./: .gitignore  CODEBASE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/confgate/: __init__.py  _core.py  _exceptions.py  _gate.py
tests/: test_decision.py  test_gate.py
